deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3sdemo-service
  namespace: k3sdemo
  labels:
    app: app-k3sdemo
spec:
  ports:
  - name: api
    port: 8000
    targetPort: api
  selector:
    app: app-k3sdemo
